--- a/Cargo.toml
+++ b/Cargo.toml
@@ -9,7 +9,9 @@ edition = "2021"
 anyhow = "1.0.69"
 clap = {version="4.1.4", features=["derive"]}
 futures = "0.3.26"
+image = "0.24"
 image_compressor = "1.3.0"
+image-compare = "0.2.4"
 reqwest = "0.11.14"
 tokio = {version="1.25.0",  features=["full"]}
 url = "2.3.1"
